EB-2004-03-17-2: Bugfix:    cluster queue instances like all.q@hostname are 
                            not resolved
                 Issue:     850
                 Changed:   sge_qmaster

JG-2003-03-17-1: Testsuite: Cleanup and workaround for issue 884

EB-2004-03-17-1: Bugfix:    qstat shows queue in A state although 
                            suspend_threshold is disabled
                 Issue:     832
                 Changed:   qstat, qhost, qmon 

DT-2004-03-17-0: Bugfix:    o qsub -sync y now survives the qmaster going down.
                            o JAPI allows client to register an error message
                              callback for error messages from the event client
                              thread.
                            o qsub prints message when the qmaster goes away and
                              comes back.
                            o Left over checkin from DRMAA Java binding
                            o Left over checkin from Flatfile Spooling
                 Changed:   JAPI, qsub, DRMAA
                 Issue:     826
                 Review:    SG

MD-2004-03-17-3  Bugfix:    merged fixes from beta branch to maintrunc
                            adapted testsuite to changed message parts
                 Changed:   inst_sge, testsuite

CR-2004-03-17-1  Bugfix:    fixed performance problem in communication library 
                            in multithreaded mode.
                 Changed:   commlib
                 Review:    SG

MD-2004-03-17-2  Bugfix:    fixed broken fs check on not solaris and linux
                            archs
                 Changed:   inst_sge, distinst
                 Issue:     846
                 Review:    CR

CR-2004-03-17-0: Bugfix:    CSP install failed on irix architecture
                 Issue:     851
                 Review:    MD

SG-2004-03-17-0: Enhancem.: - Limited the number of dynamic event clients with a