@@ -1,3 +1,6 @@
+CR-2004-03-18-0: Cleanup:   added parameter check in cl_commlib_receive_message()
+                 Changed:   commlib
+
 EB-2004-03-17-2: Bugfix:    cluster queue instances like all.q@hostname are 
                             not resolved
                  Issue:     850
